replaced deprecated Class.newInstance with Class.getConstructor().newInstance()